Revert "Maps added to nightlife"
This reverts commit f471d13caec42fe7cf83db0556b53279375416eb.

--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -85,19 +85,6 @@
                         <li>McDonald's - 2-4 Donegall Place
                         <li>Subway -  461 Ormeau Rd</li>
                     </ul>
-                    <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
-                          See it on a map
-                        </button></p>
-                    <div class="collapse" id="collapse1">
-                            <div class="card card-body">
-                                <iframe
-                                width="100%"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2311.634285957221!2d-5.930712784114193!3d54.59281788025905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486108f905aeaa9d%3A0x547f5298d34c6ebf!2sLimelight!5e0!3m2!1sen!2suk!4v1543837247904" allowfullscreen></iframe>
-                            </div>
-                        </div>    
                 </div>
             </div>
         </div>
@@ -129,19 +116,6 @@
                        <li>McDonald's - 2-4 Donegall Place</li>
                         <li>Subway -  461 Ormeau Rd</li>
                     </ul>
-                      <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
-                          See it on a map
-                        </button></p>
-                    <div class="collapse" id="collapse2">
-                            <div class="card card-body">
-                                <iframe
-                                width="100%"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2311.393648047746!2d-5.930266084114021!3d54.59705758026012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4861085610cfbc6d%3A0xa85d88e1e7987266!2sThompsons+Garage!5e0!3m2!1sen!2suk!4v1543837572465" allowfullscreen></iframe>
-                            </div>
-                        </div> 
                 </div>
             </div>
         </div>
@@ -168,29 +142,16 @@
                         <li>Free admission on Sundays!</li>
                     </ul>
                     <p>You can find out more information about Kremlin <a href="http://www.kremlin-belfast.com/">here.</a>
-                    <p>Opening Hours
+                    <p>Opening Hours</p>
                     <ul>
                         <li>Monday - Closed.</li>
-                        <li>Tuesday - Sunday: Open 24hrs</li></ul>
+                        <li>Tuesday - Sunday: Open 24hrs</li>
 
                     <p>Food locations nearby:</p>
                     <ul>
-                        <li>Burger King - Donegall Place</li>
+                        <li>Burger Kind - Donegall Place</li>
                        <li>McDonald's - 2-4 Donegall Place</li>
                     </ul>
-                       <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
-                          See it on a map
-                        </button></p>
-                    <div class="collapse" id="collapse3">
-                            <div class="card card-body">
-                                <iframe
-                                width="100%"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2311.0053718983327!2d-5.933164948228364!3d54.60389798737552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486108510e8dfcdd%3A0x2487b7150116db16!2sKremlin!5e0!3m2!1sen!2suk!4v1543837649585" allowfullscreen></iframe>
-                            </div>
-                        </div> 
                 </div>
             </div>
         </div>
@@ -222,20 +183,6 @@
                         <li>Greggs - Botanic</li>
                         <li>The Sphinx - Botanic</li>
                     </ul>
-                        <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">
-                          See it on a map
-                        </button></p>
-                    <div class="collapse" id="collapse4">
-                            <div class="card card-body">
-                                <iframe
-                                width="100%"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2312.0363666532985!2d-5.925115148228784!3d54.58573328875729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486108fcb4f80a11%3A0x98b00591c1dfe84a!2sHatfield+House!5e0!3m2!1sen!2suk!4v1543837788573" allowfullscreen></iframe>
-
-                            </div>
-                        </div> 
                 </div>
             </div>
         </div>
@@ -271,20 +218,6 @@
                         <li>Greggs - Botanic</li>
                         <li>The Sphinx - Botanic</li>
                     </ul>
-                    <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">
-                          See it on a map
-                        </button></p>
-                    <div class="collapse" id="collapse5">
-                            <div class="card card-body">
-                                <iframe
-                                width="100%"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2312.0363666532985!2d-5.925115148228784!3d54.58573328875729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486108ec241a24bd%3A0x4f4fb60f17d04c6!2sThe+Botanic+Inn!5e0!3m2!1sen!2suk!4v1543837830064" allowfullscreen></iframe>
-
-                            </div>
-                        </div> 
                 </div>
             </div>
             </div>
