Maps added to Tourism spots

--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -80,7 +80,20 @@
                         <li>Student 16+: £15.00</li>
                     </ul>
                     <p><a href="https://titanicbelfast.com/">Visit their website for more information.</a>
-              
+                        <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button></p>
+                        <div class="collapse" id="collapse1">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2310.767085555627!2d-5.9121126341135914!3d54.60809568026274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486109b027638971%3A0x4c25729beb967212!2sTitanic+Belfast!5e0!3m2!1sen!2suk!4v1543838608969" allowfullscreen>
+                                </iframe>
+
+                            </div>
+                        </div> 
                 </div>
             </div>
         </div>
@@ -108,7 +121,19 @@
                         <li>Group Child (minimum group size 15): £4.00</li>
                     </ul>
                     <p><a href="https://www.nationaltrust.org.uk/giants-causeway">Visit their website for more information.</a></p>
-                
+                     <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button></p>
+                        <div class="collapse" id="collapse2">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2274.718772660602!2d-6.514078148212546!3d55.24064458874563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48602944f4158f0f%3A0xf3228ca019de1fd2!2sGiant&#39;s+Causeway!5e0!3m2!1sen!2suk!4v1543838705128"allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div> 
                 </div>
             </div>
         </div>
@@ -130,6 +155,18 @@
                     <ul>
                     <li> £29.50 - £90.00</li></p></ul>
                     <p><a href="http://www.gameofthrones-winterfelltours.com/">Visit their website for more information</a></p>
+                    <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">See it on a map
+                            </button></p>
+                        <div class="collapse" id="collapse3">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4648.650214850901!2d-5.579357671376613!3d54.368906070824046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4861695fb37c4de1%3A0x1d14a0f8e8c8c15a!2sWinterfell+Castle+%26+Demesne+(Game+of+Thrones+Visitor+Attraction)!5e0!3m2!1sen!2suk!4v1543838877945"allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div> 
                 </div>
             </div>
         </div>
@@ -157,6 +194,18 @@
                         <li>Student: £6.95</li>
                     </ul>
                     <p><a href="https://www.marblearchcavesgeopark.com/">Visit their website for more information.</a></p>
+                         <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">See it on a map
+                            </button></p>
+                        <div class="collapse" id="collapse4">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2330.568221552317!2d-7.815331684126969!3d54.25852478018035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485e5cba72b1b343%3A0x9a960c998a2ab74d!2sMarble+Arch+Caves!5e0!3m2!1sen!2suk!4v1543838966426" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div> 
                 </div>
             </div>
         </div>
@@ -181,6 +230,18 @@
                         <li>Family(2/3): £29.00</li>
                     </ul>
                     <p><a href="https://belfastcitysightseeing.com/belfast-city-sightseeing-tour/">Visit their website for more information.</a></p>
+                     <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">See it on a map
+                            </button></p>
+                        <div class="collapse" id="collapse5">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2311.263632357467!2d-5.9314347841139465!3d54.599348180260726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48610856f479b251%3A0x3dbac361e0d765b!2sCastle+Pl%2C+Belfast!5e0!3m2!1sen!2suk!4v1543839051030"allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div> 
                 </div>
             </div>
             </div>
