updated help page to have contact numbers

--- a/html/help.html
+++ b/html/help.html
@@ -56,6 +56,32 @@
     </nav>	
     <div class="container-fluid">
         <h2>Starting university and moving away from home can be daunting. The important thing to remember is that you are not alone. There are people out there that can help you.</h2>
+        <div class="card" id="card-help-physical">
+                <div class="card-header">
+                    <h2>Some Contact Information</h2>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li class="list-group-item"> 
+                            <h3>Always call 999 if someone is seriously ill or injured and their life is at risk </h3>
+                            <p>Call <a href="tel:999">999</a> if need to contact emergency services ( fire, police, ambulance )</p>
+                            <p><strong>REMEMBER:</strong> If you call 999 for an incident that is not an emergency, you could delay someone in real need from talking to an ambulance operator, preventing them from getting an emergency medical response.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h3>Belfast City Council</h3>
+                            <p>You can find contact numbers for Belfast City Council on their <a href="http://www.belfastcity.gov.uk/contact/emergency.aspx">website.</a> For general enquiries you can call <a href="tel:028 9032 0202">028 9032 0202</a></p>
+                        </li>
+                        <li class="list-group-item">
+                            <h3>Queen's University Belfast</h3>
+                            <p> Should you need to contact Queen's University, you can call <a href="tel:+44 (0) 28 9024 51330">+44 (0) 28 9024 5133</a> during business hours and <a href="tel:+44 (0) 28 9097 5099">+44 (0) 28 9097 5099</a> outside of business hours.</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h3>Ulster University Belfast</h3>
+                            <p> Should you need to contact Ulster University, you can call <a href="tel:+44 (0)28 7012 3456 ">+44 (0)28 7012 3456</a></p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         <div class="card" id="card-help-mental">
             <div class="card-header">
                 <h2>Mental Health Services</h2>
