updated contact page

--- a/html/help.html
+++ b/html/help.html
@@ -130,7 +130,7 @@
         </div>
     </div>
     <h2>Get In Touch</h2>
-    <h3>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="../html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></h3>
+    <h3>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="../html/contact.html">here</a> or via our <a href="https://twitter.com/lostStudentGui1">twitter: @lostStudentGui1</a></h3>
     <footer>
         <p>© 2018 Copyright: Lost Student Guide</p>
     </footer>
