--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<h2>Welcome to the Lost Student Guide!</h2>
 				<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
 				<p>We also recognise that student not only feel lost physically, but mentally too. In our <a href="html/help.html">help section</a>, we have a collection of resources, that may be of use.</p>
-				<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
+				<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a href="https://twitter.com/lostStudentGui1">twitter: @lostStudentGui1</a> or visit our <a href="html/help.html">help page</a></p>
 				<div class ="container">
 					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators">
